[gd_scene load_steps=2 format=3 uid="uid://1xviwr6abqa7"]

[ext_resource type="Script" path="res://scenes/ui/intro_screen.gd" id="1_jvbic"]

[node name="IntroScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvbic")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -50.5
offset_right = 44.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Choose difficulty"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="ButtonHard" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Hard"

[node name="ButtonNormal" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Normal"

[node name="ButtonEasy" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Easy"

[node name="ButtonCakewalk" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Cakewalk"

[node name="DifficultyDescription" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Difficulty only affects speed scale of the entire game.
At chosen difficulty, the game will run at %d%% speed.
You can always change this later.
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 1

[node name="ButtonConfirm" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Confirm"

[connection signal="pressed" from="VBoxContainer/GridContainer/ButtonHard" to="." method="_on_button_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ButtonNormal" to="." method="_on_button_normal_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ButtonEasy" to="." method="_on_button_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ButtonCakewalk" to="." method="_on_button_cakewalk_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonConfirm" to="." method="_on_button_confirm_pressed"]
